integration/envoy.yaml
bootstrap_extensions:
  - name: envoy.bootstrap.wasm
    typed_config:
      "@type": type.googleapis.com/envoy.extensions.wasm.v3.WasmService
      singleton: true
      config:
        name: cextauthz_singleton
        root_id: cextauthz_singleton
        configuration:
          "@type": type.googleapis.com/google.protobuf.StringValue
          value: '{"role":"singleton"}'
        vm_config:
          vm_id: cextauthz_vm
          runtime: envoy.wasm.runtime.v8
          code:
            local:
              filename: /etc/envoy/cextauthz.wasm

static_resources:
  listeners:
    - name: listener_0
      address:
        socket_address:
          address: 0.0.0.0
          port_value: 10000
      filter_chains:
        - filters:
            - name: envoy.filters.network.http_connection_manager
              typed_config:
                "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
                stat_prefix: ingress_http
                codec_type: AUTO
                route_config:
                  name: local_route
                  virtual_hosts:
                    - name: local_service
                      domains: ["*"]
                      routes:
                        - match:
                            prefix: "/"
                          route:
                            cluster: upstream
                http_filters:
                  - name: envoy.filters.http.wasm
                    typed_config:
                      "@type": type.googleapis.com/envoy.extensions.filters.http.wasm.v3.Wasm
                      config:
                        name: cextauthz
                        root_id: cextauthz_root
                        configuration:
                          "@type": type.googleapis.com/google.protobuf.StringValue
                          value: '{"role":"http_filter","timeout_ms":1000,"cache":{"enabled":true,"ttl_ms":5000,"size_kb":64},"invalidation":{"secret":"integration-secret"}}'
                        vm_config:
                          vm_id: cextauthz_vm
                          runtime: envoy.wasm.runtime.v8
                          code:
                            local:
                              filename: /etc/envoy/cextauthz.wasm
                  - name: envoy.filters.http.router
                    typed_config:
                      "@type": type.googleapis.com/envoy.extensions.filters.http.router.v3.Router

  clusters:
    - name: ext_authz
      connect_timeout: 0.25s
      type: STRICT_DNS
      lb_policy: ROUND_ROBIN
      http2_protocol_options: {}
      load_assignment:
        cluster_name: ext_authz
        endpoints:
          - lb_endpoints:
              - endpoint:
                  address:
                    socket_address:
                      address: authz-service
                      port_value: 9000

    - name: upstream
      connect_timeout: 5s
      type: STRICT_DNS
      lb_policy: ROUND_ROBIN
      load_assignment:
        cluster_name: upstream
        endpoints:
          - lb_endpoints:
              - endpoint:
                  address:
                    socket_address:
                      address: upstream
                      port_value: 80
